# HeadsetControl-QtTray

./: .gitignore  README.md  headsetControl-QtTray.py  pyproject.toml
headsetcontrol_qttray/: HeadsetControl_QtTray.py  __main__.py
