[tool.poetry]
name = "headsetcontrol-qttray"
version = "0.1.0"
description = "Small system tray icon application written in python with QT to give easy access to information and settings for HeadsetControl (https://github.com/Sapd/HeadsetControl)"
authors = ["Nikolai Eugen Sandvik <nikolai+git@sandvik.me>"]
license="GPL-3.0-only"
readme="README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
Pillow = "^9.0.0"
PySide6 = "^6.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
